# hive-agent-client-py

./: README.md  __init__.py  client.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tutorial.md
.github/workflows/: test.yml
chat/: __init__.py  chat.py
hive_agent_client/: client.py
hive_agent_client/chat/: __init__.py  chat.py
hive_agent_client/database/: __init__.py  database.py
hive_agent_client/entry/: __init__.py  entry.py
hive_agent_client/files/: __init__.py  files.py
hive_agent_client/prompts/: __init__.py  sample_prompts.py
hive_agent_client/tools/: __init__.py  tools.py
tests/: test_client.py
tests/chat/: test_chat.py
tests/database/: test_database.py
tests/entry/: test_entry.py
tests/files/: test_file_management.py
utils/: utils.py
